<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HomeActivity!</string>
    <string name="app_name">Pure Android Voting</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="no_invitations_yet">(no users invited so far…)</string>
    <string name="vote_dates">Vote Dates…</string>
    <string name="invited_users">Invited users:</string>
    <string name="no_vote_options_yet">(no vote options yet)</string>
    <string name="vote_options">Vote Options…</string>
    <string name="multichoice">Multichoice</string>
    <string name="single">Single</string>
    <string name="single_or_multichoice">Single or Multichoice?</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>
    <string name="public_or_private">Public or Private?</string>
    <string name="detailed_description_of_vote">Detailed description of vote</string>
    <string name="description">Description:</string>
    <string name="short_vote_title">Short Vote Title</string>
    <string name="title">Title:</string>
    <string name="please_register_to_start">Please Register To Start Using This Wonderfull Software</string>
    <string name="full_name">Full Name:</string>
    <string name="your_full_name">Your full name</string>
    <string name="email_address">Email address:</string>
    <string name="your_email_address">Your email address</string>
    <string name="yes_i_agree">Yes, I agree with EVERYTHING!</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="registration">Registration</string>
    <string name="create_vote">Create Vote</string>
    <string name="select">Select</string>
    <string name="save_vote">Save Vote</string>
    <string name="publish_vote">Save and Publish</string>
    <string name="create">Create</string>
    <string name="manage_vote">Manage Vote</string>
    <string name="my_votes">My Votes</string>
    <string name="top_votes_activity">Top Public Votes</string>
    <string name="pending_votes_activity">Pending Votes</string>
    <string name="do_vote_activity">Please Vote!</string>
    <string name="vote_overview_activity">Vote Overview</string>
    <string name="start_date">Start Date:</string>
    <string name="vote_duration_setting">Vote duration, hours:</string>
    <string name="_empty_">_empty_</string>
    <string name="vote_options_button">Vote options:</string>
    <string name="duration_initial_value">0 h</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_vote">Vote!</string>
    <string name="button_participate">Participate in Vote</string>
    <string name="every_vote_counts">Every Vote Counts!</string>
    <string name="vote_option_text_view">Option text:</string>
    <string name="vote_option_text_hint">Option text</string>
    <string name="edit_vote_option_dialog">Edit Vote option</string>

</resources>